--- a/SvwDesign.DataConnector/SvwDesign.DataConnector.csproj
+++ b/SvwDesign.DataConnector/SvwDesign.DataConnector.csproj
@@ -4,7 +4,7 @@
     <TargetFramework>net5.0</TargetFramework>
     <Nullable>enable</Nullable>
     <GeneratePackageOnBuild>true</GeneratePackageOnBuild>
-    <Version>5.1.13.5</Version>
+    <Version>6.0.0</Version>
     <Authors>Susan von Wielligh</Authors>
     <Company>SvwDesign</Company>
     <Description>Basic Data Connector for Identity and base entity and Base Repository with Ardilis as the base repository</Description>
@@ -16,6 +16,10 @@
 
   <ItemGroup>
     <None Update="profile_picture_icon_v1.png">
+      <Pack>True</Pack>
+      <PackagePath></PackagePath>
+    </None>
+    <None Include="..\profile_picture_icon_v1.png">
       <Pack>True</Pack>
       <PackagePath></PackagePath>
     </None>
